--- a/src/style/ciudad.css
+++ b/src/style/ciudad.css
@@ -1,76 +1,152 @@
-body{
+body {
     background-color: black;
-    }
-    
-    /*header*/
-    
-    header{
-    
-        display: flex;
-        justify-content: space-between;
-        height: 100px;
-        align-items: center;
-        margin-bottom: -50px;
-    }
-    
-    hr{
+}
+
+/*header*/
+
+header {
+
+    display: flex;
+    justify-content: space-between;
+    height: 200px;
+    align-items: center;
+    margin-bottom: -50px;
+}
+
+hr {
     width: 98%;
     height: 2px;
     border: 0px;
     margin-bottom: 40px;
     background-color: #FF2C1F;
-    }
-    
-    header nav{
-        width: 60%;
-    }
-    
-    header nav ul{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-    
-    
-    }
-    
-    header nav ul li{
-       list-style-type: none;
-        margin-left: 60px;
-    
-    }
-    
-    header nav ul  a{
-        font-family: 'Poppins', sans-serif;
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 27px;
-        color:#fff; 
-        text-decoration:none;
-     }
-    
-     header nav ul  a :hover{
-        color: #FF2C1F;
-        
-     }
-    
-    /* Imagen Logo */
-    
-    #platinum-logo{
-        cursor: pointer;
-    }
-    /*main*/
-    main{
-        display: flex;
-        flex-direction: column;
-    }
-    
+}
+
+header nav {
+    width: 60%;
+}
+
+header nav ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 
 
-    
-    /* footer */
-    
-    footer{
-        display: flex;
-        flex-direction: row;
-        height: 250px;
-    }
+}
+
+header nav ul li {
+    list-style-type: none;
+    margin-left: 60px;
+
+}
+
+header nav ul a {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 27px;
+    color: #fff;
+    text-decoration: none;
+}
+
+header nav ul a :hover {
+    color: #FF2C1F;
+
+}
+
+/* Imagen Logo */
+
+#platinum-logo {
+    cursor: pointer;
+}
+
+/*main*/
+main {
+    height: 720px;
+    width: 100%;
+    display: flex;
+    background: gray;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Body */
+
+.city {}
+
+.selector {
+    /* Rectangle 24 */
+    width: 50%;
+    height: 386px;
+    display: flex;
+    flex-direction: column;
+    background: #FFFFFF;
+}
+
+.city-information {
+    width: 100%;
+    height: 33%;
+    background: black;
+
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    text-align: center;
+    line-height: 500%;
+    color: #FFFFFF;
+}
+
+.select-main {
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+    align-items: center;
+    justify-content: space-around;
+
+    background-color: rgb(101, 101, 189);
+
+    height: 33%;
+    width: 100%;
+}
+
+.select-city {
+    width: 30%;
+    height: 33%;
+    background: blue;
+}
+
+.select-cinema {
+    width: 30%;
+    height: 33%;
+    background: yellow;
+}
+
+.botton {
+    margin: auto;
+    width: 264px;
+    height: 58px;
+    background: #FF2C1F;
+}
+
+.botton-information {
+
+    margin: auto;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 60px;
+    text-align: center;
+
+    color: #FFFFFF;
+}
+
+
+
+/* footer */
+
+footer {
+    display: flex;
+    flex-direction: row;
+    height: 250px;
+}
