--- a/src/style/ciudad.css
+++ b/src/style/ciudad.css
@@ -7,7 +7,7 @@ body {
 header {
 
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     height: 200px;
     align-items: center;
     margin-bottom: -50px;
