--- a/src/style/ciudad.css
+++ b/src/style/ciudad.css
@@ -71,7 +71,11 @@ main {
 
 /* Body */
 
-.city {}
+.city {
+    background: gray;
+    background-size: cover;
+    background-position: center;
+}
 
 .selector {
     /* Rectangle 24 */
@@ -102,29 +106,81 @@ main {
     margin: auto;
     align-items: center;
     justify-content: space-around;
-
-    background-color: rgb(101, 101, 189);
-
     height: 33%;
     width: 100%;
 }
 
-.select-city {
-    width: 30%;
-    height: 33%;
-    background: blue;
-}
 
-.select-cinema {
-    width: 30%;
-    height: 33%;
-    background: yellow;
-}
+/* Select Code */
+
+.custom-select {
+    position: relative;
+    font-family: Montserrat;
+  }
+  
+  .custom-select select {
+    display: none; /*hide original SELECT element: */
+  }
+  
+  .select-selected {
+    background-color: rgb(104, 100, 100);
+  }
+  
+  /* Style the arrow inside the select element: */
+  .select-selected:after {
+    position: absolute;
+    content: "";
+    top: 14px;
+    right: 10px;
+    width: 0;
+    height: 0;
+    border: 6px solid transparent;
+    border-color: #fff transparent transparent transparent;
+  }
+  
+  /* Point the arrow upwards when the select box is open (active): */
+  .select-selected.select-arrow-active:after {
+    border-color: transparent transparent #fff transparent;
+    top: 7px;
+  }
+  
+  /* style the items (options), including the selected item: */
+  .select-items div,.select-selected {
+    color: #ffffff;
+    padding: 8px 16px;
+    border: 1px solid transparent;
+    border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+    cursor: pointer;
+  }
+  
+  /* Style items (options): */
+  .select-items {
+    position: absolute;
+    background-color: rgb(104, 100, 100);
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 99;
+  }
+  
+  /* Hide the items when the select box is closed: */
+  .select-hide {
+    display: none;
+  }
+  
+  .select-items div:hover, .same-as-selected {
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+
+
+
+/*Botton*/
 
 .botton {
     margin: auto;
     width: 264px;
     height: 58px;
+    z-index: 0;
     background: #FF2C1F;
 }
 
@@ -141,12 +197,43 @@ main {
     color: #FFFFFF;
 }
 
-
-
 /* footer */
 
-footer {
+footer{
+    width: 100%;
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
     height: 250px;
+}
+
+#redes{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+.red{
+    display: flex;
+    flex-direction: row
+}
+
+.info-footer-up{
+    margin-bottom: 5px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+
+    color: #fff;
+}
+.info-footer-down{
+    margin-top: 0;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+
+    color: #fff;
 }
