--- a/src/style/compra.css
+++ b/src/style/compra.css
@@ -75,6 +75,7 @@ body{
     }
 
     #movie-info{
+        width: 262px;
         margin-left: 200px;
         margin-top: -280px;
        
@@ -85,7 +86,7 @@ body{
     }
 
     #movie-info figure img{
-
+        width: 262px;
         margin-bottom: 40px; 
         
     }
