--- a/src/style/ciudad.css
+++ b/src/style/ciudad.css
@@ -176,16 +176,12 @@ main {
 
 /*Botton*/
 
-.botton {
+.button {
     margin: auto;
     width: 264px;
     height: 58px;
-    z-index: 0;
+    border: none;
     background: #FF2C1F;
-}
-
-.botton-information {
-
     margin: auto;
     font-family: Montserrat;
     font-style: normal;
@@ -193,7 +189,6 @@ main {
     font-size: 24px;
     line-height: 60px;
     text-align: center;
-
     color: #FFFFFF;
 }
 
