--- a/src/style/compra.css
+++ b/src/style/compra.css
@@ -1,5 +1,6 @@
 body{
     background-color: black;
+    
     }
     
     /*header*/
@@ -55,6 +56,7 @@ body{
     main{
         display: flex;
         flex-direction: column;
+        margin-bottom: 60px;
     }
 
     #banner{
@@ -119,7 +121,7 @@ body{
         font-weight: normal !important;
         font-size: 15px;
         line-height: 22px;
-        margin-bottom: 60px;
+        
 
     }
 
@@ -129,20 +131,14 @@ body{
         width: 100%;
         margin-right: 150px;
         margin-top: 80px;
-        height: 600px;
-     
     }
 
     #teatro hr{
         width: 98%;
-        height: 2px;
+        height: 3px;
         border: 0px;
-        margin-bottom: 50px; 
-        margin-top: 20px;
-       
         background-color: #FF2C1F;
-
-    }
+        }
 
     .title2{
         font-family: Montserrat;
@@ -226,6 +222,10 @@ body{
 
         border: none;
         outline:none;
+    }
+
+    #canvas{
+        height: 600px;
     }
 
 
