--- a/src/style/compra.css
+++ b/src/style/compra.css
@@ -6,23 +6,22 @@ body{
     /*header*/
     
     header{
-    
+
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         height: 100px;
         align-items: center;
+
     }
 
-    
     header nav{
-        width: 60%;
+        width: 30%;
     }
     
     header nav ul{
         display: flex;
         flex-direction: row;
-        justify-content: center;
-    
+        justify-items: center;
     
     }
     
