--- a/src/style/style.css
+++ b/src/style/style.css
@@ -7,29 +7,28 @@ background-color: black;
 header{
 
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     height: 100px;
     align-items: center;
     margin-bottom: -50px;
 }
 
 hr{
-width: 98%;
-height: 2px;
-border: 0px;
-margin-bottom: 40px;
-background-color: #FF2C1F;
+    width: 98%;
+    height: 2px;
+    border: 0px;
+    margin-bottom: 40px;
+    background-color: #FF2C1F;
 }
 
 header nav{
-    width: 60%;
+    width: 30%;
 }
 
 header nav ul{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-
+    justify-items: center;
 
 }
 
@@ -144,6 +143,10 @@ font-weight: bold;
 font-size: 25px;
 line-height: 22px;
 color: #FF2C1F;
+}
+
+.movieFrame{
+    text-decoration: none;
 }
 
 /* footer */
